--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -1,10 +1,8 @@
-﻿@model SalesWebMvc.Models.Seller
+﻿@model SalesWebMvc.Models.ViewModels.SellerFormViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar";
 }
-
-<h2>@ViewData["Title"]</h2>
 
 <h4>Seller</h4>
 <hr />
@@ -12,23 +10,27 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <label asp-for="Seller.Name" class="control-label"></label>
+                <input asp-for="Seller.Name" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="email" class="control-label"></label>
-                <input asp-for="email" class="form-control" />
+                <label asp-for="Seller.email" class="control-label"></label>
+                <input asp-for="Seller.email" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="birthDay" class="control-label"></label>
-                <input asp-for="birthDay" class="form-control" />
+                <label asp-for="Seller.birthDay" class="control-label"></label>
+                <input asp-for="Seller.birthDay" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="baseSalary" class="control-label"></label>
-                <input asp-for="baseSalary" class="form-control" />
+                <label asp-for="Seller.baseSalary" class="control-label"></label>
+                <input asp-for="Seller.baseSalary" class="form-control" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default"/>
+                <label asp-for="Seller.DepartmentId" class="control-label"></label>
+                <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id","Name"))" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
