Incluida validação na criação e edição de um seller

--- a/SalesWebMvc/Views/Sellers/Delete.cshtml
+++ b/SalesWebMvc/Views/Sellers/Delete.cshtml
@@ -21,25 +21,25 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @Html.DisplayNameFor(model => model.Email)
 
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.email)
+            @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.birthDay)
+            @Html.DisplayNameFor(model => model.BirthDate)
 
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.birthDay)
+            @Html.DisplayFor(model => model.BirthDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.baseSalary)
+            @Html.DisplayNameFor(model => model.BaseSalary)
 
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.baseSalary)
+            @Html.DisplayFor(model => model.BaseSalary)
         </dd>
     </dl>
 
