--- a/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IGrouping<Department,SalesRecord>>
+﻿@model IEnumerable<IGrouping<Department, SalesRecord>>
 
 
 
@@ -8,7 +8,7 @@
     DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
 }
 
-<h2>Grouping Search</h2>
+<h2>@ViewData["Title"]</h2>
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -24,6 +24,9 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Filter</button>
+            <button type="submit" class="btn btn-default" asp-action="Index">Back</button>
+
+
         </form>
     </div>
 </nav>
@@ -36,7 +39,7 @@
 {
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">Department @departmentGroup.Key.Name, Total sales = @departmentGroup.Key.TotalSales(minDate, maxDate).ToString("F2")</h3>
+            <h3 class="panel-title">Department @departmentGroup.Key.Name, Total sales = R$ @departmentGroup.Key.TotalSales(minDate, maxDate).ToString("F2")</h3>
         </div>
         <div class="panel-body">
             <table class="table table-striped table-hover">
