--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -5,6 +5,7 @@
 
 }
 
+<h2>@ViewData["Title"]</h2>
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -20,6 +21,7 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Filter</button>
+            <button type="submit" class="btn btn-default" asp-action="Index">Back</button>
         </form>
     </div>
 </nav>
